--- a/src/index.css
+++ b/src/index.css
@@ -17,25 +17,37 @@ audio {
   color: red;
 }
 select {
-   background: transparent;
-   width: 268px;
-   padding: 5px;
-   font-size: 16px;
-   line-height: 1;
-   border: 0;
-   border-radius: 0;
-   height: 34px;
-   -webkit-appearance: none;
-   align-items: center;
+  background: transparent;
+  width: 268px;
+  padding: 5px;
+  font-size: 16px;
+  line-height: 1;
+  border: 0;
+  border-radius: 0;
+  height: 34px;
+  -webkit-appearance: none;
+  align-items: center;
+}
 
-   }
-   #artistOption, #yearOption {
-      width: 240px;
-      height: 34px;
-      overflow: hidden;
-      border: 1px solid #ccc;
-      background-image: url(./images/guitar_icon.png);
-      background-repeat: no-repeat;
-      background-position: right;
-      background-size: 32px;
-      }
+#artistOption, #yearOption {
+  width: 240px;
+  height: 34px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-image: url(./images/guitar_icon.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 32px;
+}
+.playerContainer {
+  /*position: fixed;
+  bottom: 0;*/
+  /*color: red;*/
+}
+audio {
+  caratColor: red;
+  color: red;
+}
+/*.audioElements__mainPlayer___1XqiC {
+   width: 100%;
+}*/
