--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
-/*body {
-  margin: 0;
-  padding: 0;
+body {
+  /*margin: 0;
+  padding: 0;*/
   font-family: sans-serif;
 }
 
 audio {
   position: fixed;
+  left: 0;
   bottom: 0;
-  display: block;
   height: 50px;
   width: 100%;
-  background-color: red;
-  color: red;
 }
 select {
   background: transparent;
@@ -35,16 +33,49 @@ select {
   background-repeat: no-repeat;
   background-position: right;
   background-size: 32px;
-}*/
+}
 .playerContainer {
   /*position: fixed;
   bottom: 0;*/
   /*color: red;*/
 }
-audio {
-  caratColor: red;
-  color: red;
+#buttons {
+  position: fixed;
+  bottom: 40px;
 }
+
+
+
+.filter {
+
+}
+div.col-md-4.col-sm-6 {
+}
+.mainContainer {
+
+
+
+}
+select {
+  margin: auto;
+
+}
+.playList {
+justify-content: center;
+}
+.station {
+
+}
+.App {
+
+
+}
+.title {
+  text-align: center;
+}
+ h3 {
+   text-align: center;
+ }
 /*.audioElements__mainPlayer___1XqiC {
    width: 100%;
 }*/
