--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;*/
   font-family: sans-serif;
   background-color: blue;
+
 }
 
 audio {
@@ -16,18 +17,18 @@ select {
   background: transparent;
   width: 268px;
   padding: 5px;
-  font-size: 16px;
+  font-size: 22px;
   line-height: 1;
   border: 0;
   border-radius: 0;
-  height: 34px;
+  height: 37px;
   -webkit-appearance: none;
-  align-items: center;
 }
 
 #artistOption, #yearOption {
-  width: 240px;
-  height: 34px;
+  width: 320px;
+  height: 40px;
+  font-size: 20px;
   overflow: hidden;
   border: 1px solid #ccc;
   background-image: url(./images/guitar_icon.png);
@@ -58,14 +59,17 @@ div.col-md-4.col-sm-6 {
 
 }
 .songInfo {
-  padding-top: 75px;
+  padding-top: 35px;
 }
 .title {
-  background-color: red;
+  background-color: #e0ffdf;
   margin-top: 0px;
+  /*border-bottom: 3px solid black;*/
+
 }
 p {
   text-align: center;
+
 }
 select {
   margin: auto;
@@ -76,35 +80,57 @@ justify-content: center;
 overflow-y: scroll;
 height: 250px;
 width: 250px;
-border: 3px solid black;
+/*border: 3px solid black;*/
 
+}
+.songsList {
+  /*border: 3px solid black;*/
+  background-color: aliceblue;
+  font-size: 25px;
 }
 
 .station {
 
 }
 .crunchyGrooves {
-  font-size: 35px;
+
+  padding-top: 55px;
+  font-size: 36px;
+  font-family: 'VT323', monospace;
+
 }
-.App-body {
-  width: 100%;
-  background-color: blue;
+.Home {
+}
+
+.App {
+  /*background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');*/
+/*background-size: cover;*/
+border-bottom: 3px solid black;
+background-color: #e0ffdf;
 }
 html {
-  background-image: url('http://www.splashscore.com/wp-content/uploads/Buku-Music-Festival-2013-Review.jpg');
+  background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');
+  background-size: cover;
+
+  /*background-image: url('http://www.splashscore.com/wp-content/uploads/Buku-Music-Festival-2013-Review.jpg');*/
 z-index: -1;
 
 }
+span {
+  font-family: 'VT323', monospace;
 
+}
 .title {
   text-align: center;
   font-size: 65px;
 }
  h3 {
    text-align: center;
+
  }
  .welcomeToTheCrunch {
    font-size: 40px;
+
  }
 /*.audioElements__mainPlayer___1XqiC {
    width: 100%;
