--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ select {
 }
 
 #artistOption, #yearOption {
-  width: 320px;
+  width: 100%;
   height: 40px;
   font-size: 20px;
   overflow: hidden;
@@ -41,9 +41,9 @@ select {
   bottom: 0;*/
   /*color: red;*/
 }
-#buttons {
-  position: fixed;
-  bottom: 40px;
+#button {
+  margin-top: 25px;
+  text-align: center;
 }
 
 
@@ -59,7 +59,7 @@ div.col-md-4.col-sm-6 {
 
 }
 .songInfo {
-  padding-top: 35px;
+  /*padding-top: 35px;*/
 }
 .title {
   background-color: #e0ffdf;
@@ -76,10 +76,12 @@ select {
 
 }
 .playList {
-justify-content: center;
+align-items: center;
+margin: 0 auto;
 overflow-y: scroll;
-height: 250px;
 width: 250px;
+max-height: 250px;
+text-align: center;
 /*border: 3px solid black;*/
 
 }
@@ -87,14 +89,18 @@ width: 250px;
   /*border: 3px solid black;*/
   background-color: aliceblue;
   font-size: 25px;
+  text-align: center;
 }
 
 .station {
 
 }
+.stationText {
+  font-family: fantasy;
+  font-size: 22px;
+}
 .crunchyGrooves {
 
-  padding-top: 55px;
   font-size: 36px;
   font-family: 'VT323', monospace;
 
@@ -111,7 +117,6 @@ background-color: #e0ffdf;
 html {
   background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');
   background-size: cover;
-
   /*background-image: url('http://www.splashscore.com/wp-content/uploads/Buku-Music-Festival-2013-Review.jpg');*/
 z-index: -1;
 
@@ -130,7 +135,12 @@ span {
  }
  .welcomeToTheCrunch {
    font-size: 40px;
+   font-family: 'Frijole', cursive;
 
+
+ }
+ form {
+   text-align: center;
  }
 /*.audioElements__mainPlayer___1XqiC {
    width: 100%;
@@ -143,4 +153,19 @@ span {
         border-radius: 4px;
         background-color: rgba(0,0,0,.5);
         -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+    }
+    @media (max-width: 600px) {
+      .title {
+        font-size: 18px;
+      }
+      .welcomeToTheCrunch {
+        font-size: 18px;
+      }
+      .playList {
+        height: 100px;
+      }
+      .songsList {
+        font-size: 18px;
+
+      }
     }
