--- a/src/index.css
+++ b/src/index.css
@@ -29,14 +29,15 @@ select {
   font-family: 'Ruda', sans-serif;
 
   width: 100%;
-  height: 40px;
+  height: 35px;
   font-size: 20px;
   overflow: hidden;
   border: 1px solid #ccc;
-  background-image: url(./images/guitar_icon.png);
+  background-image: url(./images/music_icon.png);
   background-repeat: no-repeat;
   background-position: right;
   background-size: 32px;
+  margin-right: 20px;
 }
 .playerContainer {
   /*position: fixed;
@@ -73,9 +74,9 @@ div.col-md-4.col-sm-6 {
   margin-top: 0px;
   font-family: 'Ruda', sans-serif;
   text-align: center;
-  font-size: 65px;
+  font-size: 85px;
   margin-bottom: 0;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid aliceblue;
   font-family: 'Ruda', sans-serif;
 
   /*border-bottom: 3px solid black;*/
@@ -92,6 +93,7 @@ select {
 }
 .playListTitle {
   font-family: 'Ruda', sans-serif;
+  font-size: 33px;
 
 }
 .playList {
@@ -108,7 +110,7 @@ margin-bottom: 15px;
 
 }
 .container {
-  height: 375px;
+  height: 400px;
   /*border-left: 2px solid black;
   border-right: 2px solid black;*/
   background-color: #fb7777;
@@ -127,6 +129,8 @@ margin-bottom: 15px;
 
 .station {
   font-family: 'Ruda', sans-serif;
+  font-size: 33px;
+
 }
 .stationText {
   font-family: fantasy;
@@ -157,7 +161,7 @@ padding-top: 45px;
 .App {
   /*background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');*/
 /*background-size: cover;*/
-border-bottom: 3px solid black;
+border-bottom: 3px solid aliceblue;
 background-color: #fb7777;
 }
 html {
@@ -172,6 +176,25 @@ span {
 }
 .title {
 
+
+
+}
+.guitarContainer {
+position: relative;
+z-index: -1;
+
+
+}
+img {
+width: 200px;
+position: absolute;
+opacity: .2;
+top: 270px;
+right: 143px;
+
+}
+.songInfoTitle {
+  font-size: 33px;
 
 
 }
@@ -253,5 +276,8 @@ span {
       }
 .container {
   height: 600px;
+}
+img {
+  display: none;
 }
     }
