--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ select {
   background-image: url(./images/music_icon.png);
   background-repeat: no-repeat;
   background-position: right;
-  background-size: 32px;
+  background-size: 38px;
   margin-right: 20px;
 }
 .playerContainer {
@@ -72,9 +72,13 @@ div.col-md-4.col-sm-6 {
   /*background-color: #e0ffdf;*/
   background-color: #fb7777;
   margin-top: 0px;
+  color: aliceblue;
+
   font-family: 'Ruda', sans-serif;
   text-align: center;
-  font-size: 85px;
+  font-size: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 0;
   border-bottom: 2px solid aliceblue;
   font-family: 'Ruda', sans-serif;
@@ -93,8 +97,8 @@ select {
 }
 .playListTitle {
   font-family: 'Ruda', sans-serif;
-  font-size: 33px;
-
+  font-size: 50px;
+margin-bottom: 90px;
 }
 .playList {
 align-items: center;
@@ -106,6 +110,7 @@ width: 275px;
 max-height: 250px;
 text-align: center;
 margin-bottom: 15px;
+
 /*border: 3px solid black;*/
 
 }
@@ -129,30 +134,34 @@ margin-bottom: 15px;
 
 .station {
   font-family: 'Ruda', sans-serif;
-  font-size: 33px;
+  font-size: 50px;
+  padding-bottom: 80px;
 
 }
 .stationText {
-  font-family: fantasy;
   font-size: 22px;
   font-family: 'Ruda', sans-serif;
 
 }
 .crunchyGrooves {
-padding-top: 45px;
-  font-size: 40px;
+padding-top: 60px;
+  font-size: 50px;
   font-family: 'VT323', monospace;
+  /*color: aliceblue;*/
+
 
 }
 .currentSongName {
-  font-size: 22px;
+  font-size: 30px;
   padding-bottom: 35px;
-  padding-top: 25px;
+  padding-top: 55px;
   font-family: 'Ruda', sans-serif;
+  /*color: aliceblue;*/
+
 
 }
 .currentSongAlbum {
-  font-size: 22px;
+  font-size: 30px;
   font-family: 'Ruda', sans-serif;
 }
 .Home {
@@ -163,45 +172,97 @@ padding-top: 45px;
 /*background-size: cover;*/
 border-bottom: 3px solid aliceblue;
 background-color: #fb7777;
+height: 100vh;
 }
 html {
-  background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');
-  background-size: cover;
+  /*background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/iti1_kl_SAQM/v1/-1x-1.jpg');*/
+  /*background-size: cover;*/
   /*background-image: url('http://www.splashscore.com/wp-content/uploads/Buku-Music-Festival-2013-Review.jpg');*/
 
 
 }
 span {
   font-family: 'VT323', monospace;
-}
-.title {
-
-
+  font-size: 125px;
+  color: black;
 
 }
+
 .guitarContainer {
 position: relative;
 z-index: -1;
 
 
+
 }
-img {
+.guitarPicture {
 width: 200px;
 position: absolute;
-opacity: .2;
+opacity: .5;
 top: 270px;
 right: 143px;
 
 }
+.flameCd1 {
+  height: 60px;
+padding-top: 50px;
+opacity: .6;
+
+}
+
+.cdImg {
+  position: absolute;
+  opacity: .6;
+  left: 0;
+  top: 30%;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: 500px;
+  /*-webkit-animation: spin 4s linear infinite;
+   -moz-animation: spin 4s linear infinite;
+   animation: spin 4s linear infinite;*/
+
+}
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+.flameCdContainer {
+position: relative;
+height: 500px;
+width: 500px;
+z-index: -1;
+
+
+}
+.flameCd2 {
+  height: 125px;
+  top: 15px;
+position: fixed;
+padding-top: 20px;
+right: 180px;
+opacity: .6;
+
+}
 .songInfoTitle {
-  font-size: 33px;
+  font-size: 50px;
+
 
 
 }
  h3 {
    text-align: center;
    font-family: 'Ruda', sans-serif;
-
  }
 
  .welcomeToTheCrunch {
@@ -228,30 +289,37 @@ right: 143px;
     }
     @media (max-width: 800px) {
       .title {
-        font-size: 50px;
+        font-size: 18px;
       }
       .welcomeToTheCrunch {
         font-size: 18px;
       }
       .playList {
-        height: 175px;
+        height: 250px;
         margin-top: 0;
+        margin-bottom: 15px;
       }
       .songsList {
         font-size: 18px;
 
+      }
+      span {
+        font-size: 45px;
       }
       .currentSongName {
         font-size: 15px;
         padding-top: 0px;
         padding-bottom: 0px;
 
+
       }
+
       .crunchyGrooves {
         margin-top: 5px;
         margin-bottom: 0;
         padding-top: 0px;
         font-size: 30px;
+        /*color: aliceblue;*/
       }
       .songInfo {
         font-size: 15px;
@@ -260,12 +328,14 @@ right: 143px;
 
       }
       .songInfoTitle {
-        font-size: 18px;
+        font-size: 22px;
         padding-top: 0px;
         margin-top: 0px;
+
       }
       .playListTitle {
         font-size: 18px;
+        margin-bottom: 3px;;
       }
       .currentSongAlbum {
         font-size: 15px;
@@ -273,6 +343,8 @@ right: 143px;
       }
       .station {
         font-size: 18px;
+        margin-bottom: 0;
+        padding-bottom: 10px;;
       }
 .container {
   height: 600px;
